# lore_gui

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: _build.yml  _test_executability.yml  check_for_no_missing_todos.yml  check_for_updates.yml  check_if_changelogs_were_updated.yml  check_if_changelogs_were_updated.yml.disabled  debug_build.yml  regular_build.yml  release_binaries.yml  scheduled_build.yml
changelogs/: get_current.sh  v0.0.0.md
scripts/: install_build_dependencies_linux.sh
src/: content.rs  errors.rs  file_dialogs.rs  main.rs  style.rs  user_preferences.rs
src/app/: message_handling.rs  mod.rs  state.rs  updating_database.rs  updating_entity_view.rs  updating_history_view.rs  updating_relationship_view.rs  widget.rs
src/db_col_view/: entry.rs  mod.rs  state.rs  widget.rs
src/dialog/: change_role.rs  confirmation.rs  error.rs  mod.rs  new_descriptor.rs  new_entity.rs  new_history_item.rs  new_relationship.rs  redate_history.rs  relabel_entity.rs  rename_descriptor.rs
src/editor/: mod.rs  widget.rs
src/entity_view/: mod.rs  widget.rs
src/history_view/: day.rs  mod.rs  widget.rs
src/relationship_view/: mod.rs  widget.rs
