[package]
name = "loregui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.0"}
iced_aw = { version = "0.9.0", default-features = false, features = ["card", "modal", "selection_list"] }
lorecore = { git = "https://github.com/TheComamba/LoreCore.git", branch="dev/typing-overhaul" }
preferences = {version = "1.1"}
rfd = "0.14.0" # file dialogs
